--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ loader_version=0.14.12
 
 # Mod Properties
 mod_version=1.0.0-fabric
-maven_group=net.reimaden.arisenomore
+maven_group=net.reimaden
 archives_base_name=arisenomore
 
 # Dependencies
